--- a/app/src/main/res/layout/fragment_classes.xml
+++ b/app/src/main/res/layout/fragment_classes.xml
@@ -16,7 +16,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
+            android:text="Traveler's Classroom"
             android:textSize="22sp"
             android:textStyle="bold"
             android:textColor="@color/black"
