--- a/app/src/main/res/layout/review_popup.xml
+++ b/app/src/main/res/layout/review_popup.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
@@ -103,7 +102,7 @@
                     android:textSize="20sp"
                     android:text="Attendance required?" />
 
-                <androidx.appcompat.widget.SwitchCompat
+                <CheckBox
                     android:id="@+id/attendanceSwitch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -132,7 +131,7 @@
                     android:textSize="20sp"
                     android:text="Late submissions allowed?" />
 
-                <androidx.appcompat.widget.SwitchCompat
+                <CheckBox
                     android:id="@+id/lateSwitch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
