--- a/app/src/main/res/layout/user_pop_window.xml
+++ b/app/src/main/res/layout/user_pop_window.xml
@@ -40,6 +40,7 @@
                 android:layout_width="100dp"
                 android:layout_centerHorizontal="true"
                 android:layout_height="100dp"
+                android:paddingTop="10dp"
                 android:background="@drawable/circular"
                 android:backgroundTint="@color/white"
                 android:src="@drawable/img" />
@@ -50,6 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"
                 android:textSize="30sp"
                 tools:text="Sid Qian (2025)" />
 
@@ -73,13 +75,15 @@
 
             <Button
                 android:id="@+id/Message"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_centerHorizontal="true"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/Major"
-                android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
                 android:layout_marginBottom="10dp"
+                android:backgroundTint="@color/blue"
+                android:background="@drawable/rounded_for_recycle"
+                android:textColor="@color/white"
                 android:text="Message" />
 
         </RelativeLayout>
